/// Inter-region communication optimization for MooseNG
/// Implements advanced networking optimizations specifically for cross-region traffic

use anyhow::{Result, anyhow};
use std::collections::{HashMap, VecDeque};
use std::sync::Arc;
use std::time::{Duration, Instant};
use tokio::sync::{RwLock, Mutex, broadcast, mpsc, Semaphore};
use tokio::time::{interval, timeout, sleep};
use tracing::{debug, info, warn, error, instrument};
use serde::{Serialize, Deserialize};
use bytes::Bytes;

use crate::multiregion::{
    MultiregionConfig, RegionPeer, HLCTimestamp,
    replication::{ReplicationOperation, ReplicationAck},
};
use crate::raft::{
    log::{LogEntry, LogCommand},
    state::{LogIndex, NodeId},
};

/// Inter-region communication manager
pub struct InterRegionCommManager {
    /// Configuration
    config: MultiregionConfig,
    
    /// Adaptive traffic routing
    traffic_router: Arc<AdaptiveTrafficRouter>,
    
    /// Bandwidth optimizer
    bandwidth_optimizer: Arc<BandwidthOptimizer>,
    
    /// Protocol selector
    protocol_selector: Arc<ProtocolSelector>,
    
    /// Message prioritizer
    message_prioritizer: Arc<MessagePrioritizer>,
    
    /// Network quality monitor
    quality_monitor: Arc<NetworkQualityMonitor>,
    
    /// Connection multiplexer
    connection_mux: Arc<ConnectionMultiplexer>,
    
    /// Performance metrics
    metrics: Arc<RwLock<InterRegionMetrics>>,
    
    /// Shutdown signal
    shutdown_tx: broadcast::Sender<()>,
}

/// Adaptive traffic routing based on network conditions
pub struct AdaptiveTrafficRouter {
    /// Current routing table
    routing_table: Arc<RwLock<HashMap<u32, Vec<RouteEntry>>>>,
    
    /// Path quality measurements
    path_quality: Arc<RwLock<HashMap<RoutePath, PathQuality>>>,
    
    /// Load balancing state
    load_balancer: Arc<Mutex<LoadBalancingState>>,
    
    /// Route discovery
    route_discovery: Arc<RouteDiscovery>,
}

/// Bandwidth optimization and management
pub struct BandwidthOptimizer {
    /// Per-region bandwidth allocations
    bandwidth_allocations: Arc<RwLock<HashMap<u32, BandwidthAllocation>>>,
    
    /// Traffic shaping
    traffic_shaper: Arc<TrafficShaper>,
    
    /// Adaptive compression
    adaptive_compressor: Arc<AdaptiveCompressor>,
    
    /// Deduplication engine
    deduplication: Arc<DeduplicationEngine>,
    
    /// Rate limiters per region
    rate_limiters: Arc<RwLock<HashMap<u32, Arc<Semaphore>>>>,
}

/// Protocol selection based on network conditions
pub struct ProtocolSelector {
    /// Available protocols
    protocols: Vec<NetworkProtocol>,
    
    /// Protocol performance history
    protocol_stats: Arc<RwLock<HashMap<NetworkProtocol, ProtocolStats>>>,
    
    /// Selection strategy
    selection_strategy: ProtocolSelectionStrategy,
    
    /// Fallback chains
    fallback_chains: HashMap<NetworkProtocol, Vec<NetworkProtocol>>,
}

/// Message prioritization and QoS
pub struct MessagePrioritizer {
    /// Priority queues per region
    priority_queues: Arc<RwLock<HashMap<u32, PriorityQueues>>>,
    
    /// QoS policies
    qos_policies: HashMap<MessageType, QoSPolicy>,
    
    /// Congestion control
    congestion_controller: Arc<CongestionController>,
    
    /// Admission control
    admission_controller: Arc<AdmissionController>,
}

/// Network quality monitoring
pub struct NetworkQualityMonitor {
    /// Quality measurements per region
    quality_measurements: Arc<RwLock<HashMap<u32, NetworkQuality>>>,
    
    /// Probe scheduler
    probe_scheduler: Arc<ProbeScheduler>,
    
    /// Anomaly detector
    anomaly_detector: Arc<AnomalyDetector>,
    
    /// SLA monitor
    sla_monitor: Arc<SlaMonitor>,
}

/// Connection multiplexing and pooling
pub struct ConnectionMultiplexer {
    /// Connection pools per region
    connection_pools: Arc<RwLock<HashMap<u32, ConnectionPool>>>,
    
    /// Stream multiplexing
    stream_mux: Arc<StreamMultiplexer>,
    
    /// Connection lifecycle manager
    lifecycle_manager: Arc<ConnectionLifecycleManager>,
    
    /// Health checker
    health_checker: Arc<ConnectionHealthChecker>,
}

#[derive(Debug, Clone)]
pub struct RouteEntry {
    pub destination_region: u32,
    pub next_hop: Option<u32>,
    pub cost: f64,
    pub latency: Duration,
    pub bandwidth: u64, // bits per second
    pub reliability: f64, // 0.0 to 1.0
    pub congestion_level: CongestionLevel,
    pub last_updated: Instant,
}

#[derive(Debug, Clone, PartialEq, Eq, Hash)]
pub struct RoutePath {
    pub source: u32,
    pub destination: u32,
    pub hops: Vec<u32>,
}

#[derive(Debug, Clone)]
pub struct PathQuality {
    pub latency: Duration,
    pub jitter: Duration,
    pub packet_loss: f64,
    pub bandwidth: u64,
    pub mtu: u16,
    pub last_measured: Instant,
}

#[derive(Debug, Clone)]
pub struct LoadBalancingState {
    pub region_loads: HashMap<u32, f64>,
    pub connection_counts: HashMap<u32, u32>,
    pub current_weights: HashMap<u32, f64>,
    pub last_rebalance: Instant,
}

#[derive(Debug, Clone)]
pub struct BandwidthAllocation {
    pub total_bandwidth: u64,
    pub allocated_bandwidth: u64,
    pub priority_reservations: HashMap<MessagePriority, u64>,
    pub burst_capacity: u64,
    pub current_usage: u64,
    pub allocation_time: Instant,
}

#[derive(Debug, Clone, PartialEq)]
pub enum CongestionLevel {
    Low,
    Medium,
    High,
    Critical,
}

#[derive(Debug, Clone, PartialEq, Eq, Hash)]
pub enum NetworkProtocol {
    Tcp,
    Quic,
    Udp,
    Kcp,       // Fast and reliable ARQ protocol
    Grpc,
    Http3,
}

#[derive(Debug, Clone)]
pub struct ProtocolStats {
    pub success_rate: f64,
    pub average_latency: Duration,
    pub throughput: u64,
    pub error_count: u64,
    pub last_success: Option<Instant>,
    pub last_failure: Option<Instant>,
}

#[derive(Debug, Clone)]
pub enum ProtocolSelectionStrategy {
    LatencyOptimized,
    ThroughputOptimized,
    ReliabilityOptimized,
    Adaptive,
    CustomWeighted { weights: HashMap<String, f64> },
}

#[derive(Debug, Clone, PartialEq, Eq, Hash, Serialize, Deserialize)]
pub enum MessageType {
    Heartbeat,
    LogReplication,
    SnapshotTransfer,
    MetadataSync,
    ClientRequest,
    AdminCommand,
    Monitoring,
}

#[derive(Debug, Clone, PartialEq, Eq, Hash)]
pub enum MessagePriority {
    Critical,   // Heartbeats, leader election
    High,       // Client requests, urgent replication
    Medium,     // Normal replication, metadata sync
    Low,        // Monitoring, background tasks
    Bulk,       // Snapshot transfers, bulk operations
}

#[derive(Debug, Clone)]
pub struct QoSPolicy {
    pub priority: MessagePriority,
    pub max_latency: Duration,
    pub min_bandwidth: u64,
    pub retry_strategy: RetryStrategy,
    pub compression_level: u8,
    pub encryption_required: bool,
}

#[derive(Debug, Clone)]
pub struct PriorityQueues {
    pub critical: VecDeque<PrioritizedMessage>,
    pub high: VecDeque<PrioritizedMessage>,
    pub medium: VecDeque<PrioritizedMessage>,
    pub low: VecDeque<PrioritizedMessage>,
    pub bulk: VecDeque<PrioritizedMessage>,
}

#[derive(Debug, Clone)]
pub struct PrioritizedMessage {
    pub message: InterRegionMessage,
    pub priority: MessagePriority,
    pub enqueued_at: Instant,
    pub deadline: Option<Instant>,
    pub retry_count: u32,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct InterRegionMessage {
    pub message_id: String,
    pub source_region: u32,
    pub destination_region: u32,
    pub message_type: MessageType,
    #[serde(with = "serde_bytes")]
    pub payload: Vec<u8>,
    pub timestamp: HLCTimestamp,
    pub correlation_id: Option<String>,
    pub compression: CompressionType,
    pub encryption: EncryptionType,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub enum CompressionType {
    None,
    Lz4,
    Zstd(i32),
    Adaptive,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub enum EncryptionType {
    None,
    Aes256,
    ChaCha20,
    Tls13,
}

#[derive(Debug, Clone)]
pub enum RetryStrategy {
    None,
    FixedInterval { interval: Duration, max_attempts: u32 },
    ExponentialBackoff { base: Duration, max_delay: Duration, max_attempts: u32 },
    Adaptive { min_interval: Duration, max_interval: Duration, success_threshold: f64 },
}

#[derive(Debug, Clone)]
pub struct NetworkQuality {
    pub latency: Duration,
    pub jitter: Duration,
    pub packet_loss: f64,
    pub throughput: u64,
    pub availability: f64,
    pub error_rate: f64,
    pub last_updated: Instant,
}

#[derive(Debug, Default)]
pub struct InterRegionMetrics {
    pub messages_sent: u64,
    pub messages_received: u64,
    pub bytes_sent: u64,
    pub bytes_received: u64,
    pub average_latency: Duration,
    pub compression_ratio: f64,
    pub error_count: u64,
    pub connection_count: u32,
    pub active_streams: u32,
    pub bandwidth_utilization: f64,
}

impl InterRegionCommManager {
    pub async fn new(config: MultiregionConfig) -> Result<Self> {
        let (shutdown_tx, _) = broadcast::channel(1);
        
        let traffic_router = Arc::new(AdaptiveTrafficRouter::new().await?);
        let bandwidth_optimizer = Arc::new(BandwidthOptimizer::new(&config).await?);
        let protocol_selector = Arc::new(ProtocolSelector::new().await?);
        let message_prioritizer = Arc::new(MessagePrioritizer::new().await?);
        let quality_monitor = Arc::new(NetworkQualityMonitor::new().await?);
        let connection_mux = Arc::new(ConnectionMultiplexer::new(&config).await?);
        
        Ok(Self {
            config,
            traffic_router,
            bandwidth_optimizer,
            protocol_selector,
            message_prioritizer,
            quality_monitor,
            connection_mux,
            metrics: Arc::new(RwLock::new(InterRegionMetrics::default())),
            shutdown_tx,
        })
    }
    
    #[instrument(skip(self))]
    pub async fn start(&self) -> Result<()> {
        info!("Starting inter-region communication manager for region {}", self.config.region_id);
        
        // Start all subsystems
        self.traffic_router.start().await?;
        self.bandwidth_optimizer.start().await?;
        self.protocol_selector.start().await?;
        self.message_prioritizer.start().await?;
        self.quality_monitor.start().await?;
        self.connection_mux.start().await?;
        
        // Start optimization loops
        self.start_route_optimization().await?;
        self.start_bandwidth_optimization().await?;
        self.start_protocol_optimization().await?;
        self.start_metrics_collection().await?;
        
        info!("Inter-region communication manager started successfully");
        Ok(())
    }
    
    pub async fn stop(&self) -> Result<()> {
        let _ = self.shutdown_tx.send(());
        info!("Inter-region communication manager stopped");
        Ok(())
    }
    
    /// Send a message to another region with optimization
    #[instrument(skip(self, message))]
    pub async fn send_message(&self, message: InterRegionMessage) -> Result<String> {
        // Determine optimal route and protocol
        let route = self.traffic_router
            .get_optimal_route(self.config.region_id, message.destination_region)
            .await?;
        
        let protocol = self.protocol_selector
            .select_protocol(&message, &route)
            .await?;
        
        // Apply bandwidth throttling
        self.bandwidth_optimizer
            .throttle_if_needed(message.destination_region, message.payload.len())
            .await?;
        
        // Prioritize and queue message
        let prioritized = self.message_prioritizer
            .prioritize_message(message.clone())
            .await?;
        
        // Compress and encrypt if needed
        let optimized_message = self.bandwidth_optimizer
            .optimize_message(message)
            .await?;
        
        // Send via optimal connection
        let connection = self.connection_mux
            .get_connection(optimized_message.destination_region, protocol)
            .await?;
        
        let message_id = self.send_via_connection(connection, optimized_message).await?;
        
        // Update metrics
        self.update_send_metrics(&prioritized).await;
        
        Ok(message_id)
    }
    
    /// Receive and process incoming messages
    pub async fn receive_messages(&self) -> mpsc::Receiver<InterRegionMessage> {
        let (tx, rx) = mpsc::channel(1000);
        
        // Start message receiver for each connection
        for peer in &self.config.peer_regions {
            let connection_mux = self.connection_mux.clone();
            let bandwidth_optimizer = self.bandwidth_optimizer.clone();
            let tx_clone = tx.clone();
            let region_id = peer.region_id;
            
            tokio::spawn(async move {
                while let Ok(message) = Self::receive_from_region(
                    &connection_mux,
                    &bandwidth_optimizer,
                    region_id,
                ).await {
                    if tx_clone.send(message).await.is_err() {
                        break;
                    }
                }
            });
        }
        
        rx
    }
    
    async fn send_via_connection(
        &self,
        _connection: Connection,
        _message: InterRegionMessage,
    ) -> Result<String> {
        // TODO: Implement actual message sending
        Ok(format!("msg-{}", chrono::Utc::now().timestamp_millis()))
    }
    
    async fn receive_from_region(
        _connection_mux: &Arc<ConnectionMultiplexer>,
        _bandwidth_optimizer: &Arc<BandwidthOptimizer>,
        _region_id: u32,
    ) -> Result<InterRegionMessage> {
        // TODO: Implement actual message receiving
        sleep(Duration::from_secs(1)).await;
        Err(anyhow!("Not implemented"))
    }
    
    async fn update_send_metrics(&self, _message: &PrioritizedMessage) {
        let mut metrics = self.metrics.write().await;
        metrics.messages_sent += 1;
        // TODO: Update other metrics
    }
    
    async fn start_route_optimization(&self) -> Result<()> {
        let traffic_router = self.traffic_router.clone();
        let quality_monitor = self.quality_monitor.clone();
        let mut shutdown_rx = self.shutdown_tx.subscribe();
        
        tokio::spawn(async move {
            let mut optimization_interval = interval(Duration::from_secs(30));
            
            loop {
                tokio::select! {
                    _ = optimization_interval.tick() => {
                        if let Err(e) = Self::optimize_routes(&traffic_router, &quality_monitor).await {
                            warn!("Route optimization failed: {}", e);
                        }
                    }
                    _ = shutdown_rx.recv() => {
                        break;
                    }
                }
            }
        });
        
        Ok(())
    }
    
    async fn start_bandwidth_optimization(&self) -> Result<()> {
        let bandwidth_optimizer = self.bandwidth_optimizer.clone();
        let mut shutdown_rx = self.shutdown_tx.subscribe();
        
        tokio::spawn(async move {
            let mut optimization_interval = interval(Duration::from_secs(10));
            
            loop {
                tokio::select! {
                    _ = optimization_interval.tick() => {
                        if let Err(e) = bandwidth_optimizer.optimize_allocations().await {
                            warn!("Bandwidth optimization failed: {}", e);
                        }
                    }
                    _ = shutdown_rx.recv() => {
                        break;
                    }
                }
            }
        });
        
        Ok(())
    }
    
    async fn start_protocol_optimization(&self) -> Result<()> {
        let protocol_selector = self.protocol_selector.clone();
        let mut shutdown_rx = self.shutdown_tx.subscribe();
        
        tokio::spawn(async move {
            let mut optimization_interval = interval(Duration::from_secs(60));
            
            loop {
                tokio::select! {
                    _ = optimization_interval.tick() => {
                        if let Err(e) = protocol_selector.optimize_selection().await {
                            warn!("Protocol optimization failed: {}", e);
                        }
                    }
                    _ = shutdown_rx.recv() => {
                        break;
                    }
                }
            }
        });
        
        Ok(())
    }
    
    async fn start_metrics_collection(&self) -> Result<()> {
        let metrics = self.metrics.clone();
        let connection_mux = self.connection_mux.clone();
        let mut shutdown_rx = self.shutdown_tx.subscribe();
        
        tokio::spawn(async move {
            let mut collection_interval = interval(Duration::from_secs(5));
            
            loop {
                tokio::select! {
                    _ = collection_interval.tick() => {
                        Self::collect_metrics(&metrics, &connection_mux).await;
                    }
                    _ = shutdown_rx.recv() => {
                        break;
                    }
                }
            }
        });
        
        Ok(())
    }
    
    async fn optimize_routes(
        _traffic_router: &Arc<AdaptiveTrafficRouter>,
        _quality_monitor: &Arc<NetworkQualityMonitor>,
    ) -> Result<()> {
        // TODO: Implement route optimization logic
        Ok(())
    }
    
    async fn collect_metrics(
        _metrics: &Arc<RwLock<InterRegionMetrics>>,
        _connection_mux: &Arc<ConnectionMultiplexer>,
    ) {
        // TODO: Implement metrics collection
    }
    
    /// Get current communication metrics
    pub async fn get_metrics(&self) -> InterRegionMetrics {
        let metrics = self.metrics.read().await;
        InterRegionMetrics {
            messages_sent: metrics.messages_sent,
            messages_received: metrics.messages_received,
            bytes_sent: metrics.bytes_sent,
            bytes_received: metrics.bytes_received,
            average_latency: metrics.average_latency,
            compression_ratio: metrics.compression_ratio,
            error_count: metrics.error_count,
            connection_count: metrics.connection_count,
            active_streams: metrics.active_streams,
            bandwidth_utilization: metrics.bandwidth_utilization,
        }
    }
    
    /// Manual optimization trigger
    pub async fn trigger_optimization(&self) -> Result<()> {
        // Force optimization of all subsystems
        self.traffic_router.force_route_recalculation().await?;
        self.bandwidth_optimizer.optimize_allocations().await?;
        self.protocol_selector.optimize_selection().await?;
        self.quality_monitor.trigger_probe_burst().await?;
        
        info!("Manual optimization completed");
        Ok(())
    }
}

// Placeholder implementations for the complex subsystems
impl AdaptiveTrafficRouter {
    async fn new() -> Result<Self> {
        Ok(Self {
            routing_table: Arc::new(RwLock::new(HashMap::new())),
            path_quality: Arc::new(RwLock::new(HashMap::new())),
            load_balancer: Arc::new(Mutex::new(LoadBalancingState {
                region_loads: HashMap::new(),
                connection_counts: HashMap::new(),
                current_weights: HashMap::new(),
                last_rebalance: Instant::now(),
            })),
            route_discovery: Arc::new(RouteDiscovery::new()),
        })
    }
    
    async fn start(&self) -> Result<()> {
        // TODO: Start route discovery and maintenance
        Ok(())
    }
    
    async fn get_optimal_route(&self, _source: u32, _destination: u32) -> Result<RouteEntry> {
        // TODO: Implement optimal route selection
        Ok(RouteEntry {
            destination_region: _destination,
            next_hop: None,
            cost: 1.0,
            latency: Duration::from_millis(50),
            bandwidth: 1_000_000_000, // 1 Gbps
            reliability: 0.99,
            congestion_level: CongestionLevel::Low,
            last_updated: Instant::now(),
        })
    }
    
    async fn force_route_recalculation(&self) -> Result<()> {
        // TODO: Implement route recalculation
        Ok(())
    }
}

impl BandwidthOptimizer {
    async fn new(_config: &MultiregionConfig) -> Result<Self> {
        Ok(Self {
            bandwidth_allocations: Arc::new(RwLock::new(HashMap::new())),
            traffic_shaper: Arc::new(TrafficShaper::new()),
            adaptive_compressor: Arc::new(AdaptiveCompressor::new()),
            deduplication: Arc::new(DeduplicationEngine::new()),
            rate_limiters: Arc::new(RwLock::new(HashMap::new())),
        })
    }
    
    async fn start(&self) -> Result<()> {
        // TODO: Start bandwidth monitoring and optimization
        Ok(())
    }
    
    async fn throttle_if_needed(&self, _region_id: u32, _message_size: usize) -> Result<()> {
        // TODO: Implement bandwidth throttling
        Ok(())
    }
    
    async fn optimize_message(&self, message: InterRegionMessage) -> Result<InterRegionMessage> {
        // TODO: Apply compression and deduplication
        Ok(message)
    }
    
    async fn optimize_allocations(&self) -> Result<()> {
        // TODO: Optimize bandwidth allocations
        Ok(())
    }
}

impl ProtocolSelector {
    async fn new() -> Result<Self> {
        Ok(Self {
            protocols: vec![NetworkProtocol::Grpc, NetworkProtocol::Quic, NetworkProtocol::Http3],
            protocol_stats: Arc::new(RwLock::new(HashMap::new())),
            selection_strategy: ProtocolSelectionStrategy::Adaptive,
            fallback_chains: HashMap::new(),
        })
    }
    
    async fn start(&self) -> Result<()> {
        // TODO: Start protocol monitoring
        Ok(())
    }
    
    async fn select_protocol(&self, _message: &InterRegionMessage, _route: &RouteEntry) -> Result<NetworkProtocol> {
        // TODO: Implement intelligent protocol selection
        Ok(NetworkProtocol::Grpc)
    }
    
    async fn optimize_selection(&self) -> Result<()> {
        // TODO: Optimize protocol selection based on performance
        Ok(())
    }
}

impl MessagePrioritizer {
    async fn new() -> Result<Self> {
        Ok(Self {
            priority_queues: Arc::new(RwLock::new(HashMap::new())),
            qos_policies: Self::default_qos_policies(),
            congestion_controller: Arc::new(CongestionController::new()),
            admission_controller: Arc::new(AdmissionController::new()),
        })
    }
    
    async fn start(&self) -> Result<()> {
        // TODO: Start message processing
        Ok(())
    }
    
    async fn prioritize_message(&self, message: InterRegionMessage) -> Result<PrioritizedMessage> {
        let priority = self.determine_priority(&message);
        
        Ok(PrioritizedMessage {
            message,
            priority,
            enqueued_at: Instant::now(),
            deadline: None,
            retry_count: 0,
        })
    }
    
    fn determine_priority(&self, message: &InterRegionMessage) -> MessagePriority {
        match message.message_type {
            MessageType::Heartbeat => MessagePriority::Critical,
            MessageType::ClientRequest => MessagePriority::High,
            MessageType::LogReplication => MessagePriority::Medium,
            MessageType::MetadataSync => MessagePriority::Medium,
            MessageType::SnapshotTransfer => MessagePriority::Bulk,
            MessageType::AdminCommand => MessagePriority::High,
            MessageType::Monitoring => MessagePriority::Low,
        }
    }
    
    fn default_qos_policies() -> HashMap<MessageType, QoSPolicy> {
        let mut policies = HashMap::new();
        
        policies.insert(MessageType::Heartbeat, QoSPolicy {
            priority: MessagePriority::Critical,
            max_latency: Duration::from_millis(100),
            min_bandwidth: 1024, // 1 KB/s
            retry_strategy: RetryStrategy::FixedInterval {
                interval: Duration::from_millis(100),
                max_attempts: 3,
            },
            compression_level: 0,
            encryption_required: false,
        });
        
        policies.insert(MessageType::ClientRequest, QoSPolicy {
            priority: MessagePriority::High,
            max_latency: Duration::from_millis(500),
            min_bandwidth: 1024 * 1024, // 1 MB/s
            retry_strategy: RetryStrategy::ExponentialBackoff {
                base: Duration::from_millis(100),
                max_delay: Duration::from_secs(5),
                max_attempts: 5,
            },
            compression_level: 3,
            encryption_required: true,
        });
        
        policies
    }
}

impl NetworkQualityMonitor {
    async fn new() -> Result<Self> {
        Ok(Self {
            quality_measurements: Arc::new(RwLock::new(HashMap::new())),
            probe_scheduler: Arc::new(ProbeScheduler::new()),
            anomaly_detector: Arc::new(AnomalyDetector::new()),
            sla_monitor: Arc::new(SlaMonitor::new()),
        })
    }
    
    async fn start(&self) -> Result<()> {
        // TODO: Start quality monitoring
        Ok(())
    }
    
    async fn trigger_probe_burst(&self) -> Result<()> {
        // TODO: Trigger immediate quality probes
        Ok(())
    }
}

impl ConnectionMultiplexer {
    async fn new(_config: &MultiregionConfig) -> Result<Self> {
        Ok(Self {
            connection_pools: Arc::new(RwLock::new(HashMap::new())),
            stream_mux: Arc::new(StreamMultiplexer::new()),
            lifecycle_manager: Arc::new(ConnectionLifecycleManager::new()),
            health_checker: Arc::new(ConnectionHealthChecker::new()),
        })
    }
    
    async fn start(&self) -> Result<()> {
        // TODO: Start connection management
        Ok(())
    }
    
    async fn get_connection(&self, _region_id: u32, _protocol: NetworkProtocol) -> Result<Connection> {
        // TODO: Get or create optimized connection
        Ok(Connection::new())
    }
}

// Placeholder types and implementations
pub struct RouteDiscovery;
impl RouteDiscovery {
    fn new() -> Self { Self }
}

pub struct TrafficShaper;
impl TrafficShaper {
    fn new() -> Self { Self }
}

pub struct AdaptiveCompressor;
impl AdaptiveCompressor {
    fn new() -> Self { Self }
}

pub struct DeduplicationEngine;
impl DeduplicationEngine {
    fn new() -> Self { Self }
}

pub struct CongestionController;
impl CongestionController {
    fn new() -> Self { Self }
}

pub struct AdmissionController;
impl AdmissionController {
    fn new() -> Self { Self }
}

pub struct ProbeScheduler;
impl ProbeScheduler {
    fn new() -> Self { Self }
}

pub struct AnomalyDetector;
impl AnomalyDetector {
    fn new() -> Self { Self }
}

pub struct SlaMonitor;
impl SlaMonitor {
    fn new() -> Self { Self }
}

pub struct ConnectionPool;
pub struct StreamMultiplexer;
impl StreamMultiplexer {
    fn new() -> Self { Self }
}

pub struct ConnectionLifecycleManager;
impl ConnectionLifecycleManager {
    fn new() -> Self { Self }
}

pub struct ConnectionHealthChecker;
impl ConnectionHealthChecker {
    fn new() -> Self { Self }
}

pub struct Connection;
impl Connection {
    fn new() -> Self { Self }
}

#[cfg(test)]
mod tests {
    use super::*;
    
    #[tokio::test]
    async fn test_message_prioritization() {
        let prioritizer = MessagePrioritizer::new().await.unwrap();
        
        let heartbeat_msg = InterRegionMessage {
            message_id: "test-1".to_string(),
            source_region: 1,
            destination_region: 2,
            message_type: MessageType::Heartbeat,
            payload: Bytes::from("heartbeat"),
            timestamp: HLCTimestamp { logical: 0, physical: 0 },
            correlation_id: None,
            compression: CompressionType::None,
            encryption: EncryptionType::None,
        };
        
        let prioritized = prioritizer.prioritize_message(heartbeat_msg).await.unwrap();
        assert_eq!(prioritized.priority, MessagePriority::Critical);
    }
    
    #[tokio::test]
    async fn test_route_optimization() {
        let config = MultiregionConfig::default();
        let comm_manager = InterRegionCommManager::new(config).await.unwrap();
        
        // Should not panic
        let _ = comm_manager.trigger_optimization().await;
    }
}